# partage

./: .gitignore  .travis.yml  LICENSE  LTAG.hs  README.md  factorized-tag-parser.cabal  ltag.cabal  partage.cabal  stack.yaml  tag-vanilla.cabal
examples/: acid-rains.hs  example-no-dep.txt  example.txt  french.tsv  little.tsv  minister-symbolic.hs  minister.hs  tom.hs
examples/old/: acid-rains.hs  command.sh  minister-symbolic.hs  tom.hs
examples/v1/: example1.hs  example2.hs
proofs/: Amort.v  App.v  CFG.v  Cost.v  Grammar.v  InfRules.v  LE.v  Maps.v  README.md  Span.v  Utils.v  make_makefile.sh
src/NLP/LTAG/: Core.hs  Earley5.hs  Early.hs  Early2.hs  Early3.hs  Early4.hs  Early5.hs  FlatFS.hs  GenTree.hs  Rule.hs  Tree.hs  Tree2.hs  V1.hs
src/NLP/LTAG/Earley5/: Draw.hs  GenTest.hs  Test3.hs  Test4.hs
src/NLP/LTAG/Early/: Test1.hs
src/NLP/LTAG/Early3/: Earley.hs  Rule.hs  Test1.hs  Test2.hs  Test3.hs
src/NLP/LTAG/Early4/: Test3.hs
src/NLP/LTAG/Early5/: Test3.hs
src/NLP/Partage/: AStar.hs  Auto.hs  CompDAG.hs  Core.hs  DAG.hs  Earley.hs  EdgeTree.hs  Env.hs  FS.hs  FSTree.hs  FSTree2.hs  FactGram.hs  Gen.hs  Inject.hs  SOrd.hs  SubtreeSharing.hs  Test.hs  Tests.hs  Tree.hs
src/NLP/Partage/AStar/: Auto.hs  Base.hs  Chart.hs  DepTree.hs  Deriv.hs  ExtWeight.hs  Heuristic.hs  HeuristicNew.hs  HeuristicOld.hs  Item.hs
src/NLP/Partage/AStar/Deriv/: Gorn.hs
src/NLP/Partage/AStar/Heuristic/: Bag.hs  Base.hs  Dummy.hs
src/NLP/Partage/Auto/: DAWG.hs  List.hs  Set.hs  Trie.hs  WeiSet.hs  WeiTrie.hs
src/NLP/Partage/Earley/: :w  Auto.hs  AutoAP.hs  Base.hs  Basic.hs  Chart.hs  Comp.hs  Deriv.hs  ExtWeight.hs  Hypergraph.hs  Item.hs  Monad.hs  Parser.hs  Tmp.hs  Trav.hs  TreeGen.hs
src/NLP/Partage/Earley/Auto/: Tests.hs
src/NLP/Partage/Earley/New/: Tests.hs
src/NLP/Partage/Earley/Pred/: Tests.hs
src/NLP/Partage/Earley/Prob/: AStar.hs  AutoAP.hs  Dijkstra.hs  SymInf.hs
src/NLP/Partage/Earley/Prob/Dijkstra/: Tests.hs
src/NLP/Partage/Earley/TreeGen/: Tests.hs
src/NLP/Partage/FS/: Flat.hs  Generic.hs
src/NLP/Partage/FS/Flat/: Env.hs  FSTree.hs  FSTree2.hs
src/NLP/Partage/FS/Generic/: Tree.hs
src/NLP/Partage/FactGram/: DAG.hs  Internal.hs  SubtreeSharing.hs  Weighted.hs
src/NLP/Partage/Format/: Brackets.hs
src/NLP/Partage/OldEarley/: Auto.hs  AutoAP.hs  Chart.hs  ExtWeight.hs  Hypergraph.hs  Item.hs  Pred.hs
src/NLP/Partage/Tree/: Comp.hs  Other.hs
src/NLP/TAG/Vanilla/: Auto.hs  Automaton.hs  Core.hs  Earley.hs  Earley5.hs  EarleyAuto.hs  EarleyBasic.hs  EarleyPred.hs  Early3.hs  FactGram.hs  Gen.hs  Rule.hs  SOrd.hs  SubtreeSharing.hs  Tests.hs  Tree.hs  V1.hs  WRule.hs
src/NLP/TAG/Vanilla/Auto/: Abstract.hs  DAWG.hs  Edge.hs  List.hs  Mini.hs  Set.hs  Trie.hs
src/NLP/TAG/Vanilla/Earley/: Auto.hs  AutoAP.hs  Basic.hs  New.hs  Pred.hs  Test.hs  Tests.hs  TreeGen.hs
src/NLP/TAG/Vanilla/Earley/Auto/: Tests.hs
src/NLP/TAG/Vanilla/Earley/AutoAP/: Tests.hs
src/NLP/TAG/Vanilla/Earley/Basic/: Tests.hs
src/NLP/TAG/Vanilla/Earley/New/: Tests.hs
src/NLP/TAG/Vanilla/Earley/Pred/: Tests.hs
src/NLP/TAG/Vanilla/Earley/Prob/: AStar.hs  Dijkstra.hs  Tests.hs
src/NLP/TAG/Vanilla/Earley/Prob/AStar/: Tests.hs
src/NLP/TAG/Vanilla/Earley/Prob/Dijkstra/: Tests.hs
src/NLP/TAG/Vanilla/Earley/Prob/SymInf/: Tests.hs
src/NLP/TAG/Vanilla/Earley/TreeGen/: Tests.hs
src/NLP/TAG/Vanilla/Earley5/: Test4.hs
src/NLP/TAG/Vanilla/EarleyAuto/: Tests.hs
src/NLP/TAG/Vanilla/EarleyBasic/: Tests.hs
src/NLP/TAG/Vanilla/EarleyPred/: Tests.hs
src/NLP/TAG/Vanilla/Early3/: Test2.hs
src/NLP/TAG/Vanilla/Early4/: Test3.hs
src/NLP/TAG/Vanilla/FactGram/: Internal.hs
src/NLP/TAG/Vanilla/Rule/: Internal.hs
src/NLP/TAG/Vanilla/SubtreeSharing/: Tests.hs
src/NLP/TAG/Vanilla/Tree/: Other.hs
src/NLP/Vanilla/TAG/: Core.hs  Early2.hs  FlatFS.hs  Tree2.hs
src/NLP/Vanilla/TAG/Early2/: Test1.hs
src/NLP/Vanilla/TAG/Early3/: Core.hs  Test3.hs
src/NLP/Vanilla/TAG/Early4/: Test2.hs
tests/: Parser.hs  TestSet.hs  test-partage.hs  test.hs
tools/: partage.hs  test1.hs
