name:               factorized-tag-parser
version:            0.1
synopsis:           Parsing factorized TAGs
description:
    Parsing factorized tree adjoining grammars.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2015-2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/factorized-tag-parser
build-type:         Simple

library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.5      && < 0.6
      , mtl                 >= 2.1      && < 2.3
      , transformers        >= 0.3      && < 0.5
      , pipes               >= 4.1      && < 4.2
      , PSQueue             >= 1.1      && < 1.2
      , data-partition      >= 0.3      && < 0.4
      , mmorph              >= 1.0      && < 1.1
      , dawg-ord            >= 0.5      && < 0.6
      , data-lens-light     >= 0.1      && < 0.2
      , random              >= 1.1      && < 1.2
      , vector              >= 0.10     && < 0.12

    exposed-modules:
        NLP.TAG.Vanilla.Core
      , NLP.TAG.Vanilla.Tree
      , NLP.TAG.Vanilla.Tree.Other
      , NLP.TAG.Vanilla.Rule
      , NLP.TAG.Vanilla.Gen
      , NLP.TAG.Vanilla.SubtreeSharing
      , NLP.TAG.Vanilla.Auto.Edge
      , NLP.TAG.Vanilla.Auto.Abstract
      , NLP.TAG.Vanilla.Auto.List
      , NLP.TAG.Vanilla.Auto.Trie
      , NLP.TAG.Vanilla.Auto.DAWG
      , NLP.TAG.Vanilla.Auto.Set
      , NLP.TAG.Vanilla.Earley.AutoAP

-- NOT FOR THIS VERIONS:
--       , NLP.TAG.Vanilla.WRule
--       , NLP.TAG.Vanilla.Earley.Auto
--       , NLP.TAG.Vanilla.Earley.Basic
--       , NLP.TAG.Vanilla.Earley.Pred
--       , NLP.TAG.Vanilla.Earley.TreeGen
--       , NLP.TAG.Vanilla.Earley.Prob.SymInf
--       , NLP.TAG.Vanilla.Earley.Prob.Dijkstra
--       , NLP.TAG.Vanilla.Earley.Prob.AStar
--       , NLP.TAG.Vanilla.Earley.New

    other-modules:
        NLP.TAG.Vanilla.Rule.Internal

    ghc-options: -Wall
    -- cpp-options: -DDebug


source-repository head
    type: git
    location: https://github.com/kawu/tag-vanilla.git


test-suite test
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is:
        test.hs
    other-modules:
        TestSet
      , Parser
    build-depends:
        factorized-tag-parser
      , base                    >= 4        && < 5
      , containers              >= 0.5      && < 0.6
      , tasty                   >= 0.10
      , tasty-hunit             >= 0.9
      , HUnit                   >= 1.2
