name:               ltag
version:            0.11
synopsis:           LTAG
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/ltag
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base            >= 4        && < 5
      , containers      >= 0.4      && < 0.5

    exposed-modules:
        NLP.LTAG.V1
      , NLP.LTAG.Tree
      , NLP.LTAG.Early

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/ltag.git
