name:               ltag
version:            0.11
synopsis:           LTAG
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/ltag
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.4      && < 0.6
      , mtl                 >= 2.1      && < 2.2
      , transformers        >= 0.3      && < 0.4
      , feature-structure   >= 0.2      && < 0.3
      , pipes               >= 4.1      && < 4.2
      , PSQueue             >= 1.1      && < 1.2
      , data-partition      >= 0.3      && < 0.4

    exposed-modules:
        NLP.LTAG.Core
      , NLP.LTAG.Tree2
      , NLP.LTAG.Rule
      , NLP.LTAG.Earley5

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/ltag.git
