name:               partage
version:            0.3.0.0
synopsis:           Earley-style parsing with compressed TAGs
description:
    The library implements an Earley-style, bottom-up parser for tree adjoining
    grammars (TAGs) with special focus on structure (and, hence, computation) sharing.
    .
    Two particular flavours of structure sharing are currently implemented:
    .
    * Subtrees common to different elementary trees are shared amongst them.
      The input TAG, which can be seen as a set of elementary (initial and auxiliary)
      grammar trees, is in fact transformed into an equivalent DAG.
    .
    * Flat production grammar rules representing the individual parts of the DAG
      are then compressed in the form of a minimal FSA. Other forms of
      compression are also provided by the library (e.g. prefix tree).
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2015-2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/partage
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4.8      && < 5
      , containers          >= 0.5      && < 0.6
      , mtl                 >= 2.1      && < 2.3
      , transformers        >= 0.3      && < 0.5
      , pipes               >= 4.1      && < 4.2
      , PSQueue             >= 1.1      && < 1.2
      , data-partition      >= 0.3      && < 0.4
      , mmorph              >= 1.0      && < 1.1
      , dawg-ord            >= 0.5      && < 0.6
      , data-lens-light     >= 0.1      && < 0.2
      , random              >= 1.1      && < 1.2
      , vector              >= 0.10     && < 0.12
      , hashable            >= 1.2      && < 1.3
      , hashtables          >= 1.2      && < 1.3
      , data-memocombinators    >= 0.5  && < 0.6

      -- only when debugging:
      , time                >= 1.5      && < 1.7

    exposed-modules:
        NLP.Partage.Tree
      , NLP.Partage.Tree.Other
      , NLP.Partage.DAG
      , NLP.Partage.Gen
      , NLP.Partage.Auto
      , NLP.Partage.Auto.List
      , NLP.Partage.Auto.Trie
      , NLP.Partage.Auto.DAWG
      , NLP.Partage.Auto.Set
      , NLP.Partage.Auto.WeiTrie
      , NLP.Partage.Earley
      , NLP.Partage.AStar
      , NLP.Partage.AStar.Deriv

    other-modules:
        NLP.Partage.SOrd
      , NLP.Partage.Earley.AutoAP
      , NLP.Partage.AStar.Auto
      , NLP.Partage.AStar.Heuristic
      , NLP.Partage.AStar.Heuristic.Bag
      , NLP.Partage.AStar.Heuristic.Dummy
      , NLP.Partage.AStar.Heuristic.Base

    ghc-options: -Wall
    -- cpp-options: -DDebugOn


source-repository head
    type: git
    location: https://github.com/kawu/tag-vanilla.git


test-suite test
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is:
        test.hs
    other-modules:
        TestSet
      , Parser
    build-depends:
        partage
      , base                    >= 4        && < 5
      , containers              >= 0.5      && < 0.6
      , tasty                   >= 0.10
      , tasty-hunit             >= 0.9
      , HUnit                   >= 1.2
      , data-memocombinators    >= 0.5  && < 0.6
      , pipes                   >= 4.1      && < 4.2
      , transformers            >= 0.3      && < 0.5


executable test-partage
    default-language:
        Haskell2010
    build-depends:
        partage
      , base                    >= 4        && < 5
      , containers          	>= 0.5      && < 0.6
    hs-source-dirs: tests
    main-is: test-partage.hs
    ghc-options: -Wall -O2 -threaded -rtsopts
