name:               partage
version:            0.3.0.0
synopsis:           Earley-style parsing with compressed TAGs
description:
    The library implements an Earley-style, bottom-up parser for tree adjoining
    grammars (TAGs) with special focus on structure (and, hence, computation) sharing.
    .
    Two particular flavours of structure sharing are currently implemented:
    .
    * Subtrees common to different elementary trees are shared amongst them.
      The input TAG, which can be seen as a set of elementary (initial and auxiliary)
      grammar trees, is in fact transformed into an equivalent DAG.
    .
    * Flat production grammar rules representing the individual parts of the DAG
      are then compressed in the form of a minimal FSA. Other forms of
      compression are also provided by the library (e.g. prefix tree).
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2015-2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/partage
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4.8      && < 5
      , containers          >= 0.5      && < 0.6
      , text                >= 0.11     && < 1.3
      , mtl                 >= 2.1      && < 2.3
      , transformers        >= 0.3      && < 0.6
      , pipes               >= 4.1      && < 4.4
      , PSQueue             >= 1.1      && < 1.2
      , data-partition      >= 0.3      && < 0.4
      , mmorph              >= 1.0      && < 1.1
      , dawg-ord            >= 0.5      && < 0.6
      , data-lens-light     >= 0.1      && < 0.2
      , random              >= 1.1      && < 1.2
      , vector              >= 0.10     && < 0.12
      , hashable            >= 1.2      && < 1.3
      , hashtables          >= 1.2      && < 1.3
      , data-memocombinators    >= 0.5  && < 0.6

      -- only when debugging:
      , time                >= 1.5      && < 1.7

    exposed-modules:
        NLP.Partage.Tree
      , NLP.Partage.Tree.Other
      , NLP.Partage.EdgeTree
      , NLP.Partage.Gen
      , NLP.Partage.Auto
      , NLP.Partage.Auto.List
      , NLP.Partage.Auto.Trie
      , NLP.Partage.Auto.DAWG
      , NLP.Partage.Auto.Set
--       , NLP.Partage.Auto.WeiTrie

--       , NLP.Partage.Earley.Auto
--       , NLP.Partage.Earley.Base
--       , NLP.Partage.Earley.Item
--       , NLP.Partage.Earley.ExtWeight
--       , NLP.Partage.Earley.Chart
--       , NLP.Partage.Earley.Hypergraph
--       , NLP.Partage.Earley.Monad

      , NLP.Partage.DAG
      , NLP.Partage.Env
      , NLP.Partage.FS
      , NLP.Partage.FSTree
      , NLP.Partage.FSTree2
      , NLP.Partage.Earley.Auto
      , NLP.Partage.Earley.Base
      , NLP.Partage.Earley.Item
      , NLP.Partage.Earley.Trav
      , NLP.Partage.Earley.Chart
      , NLP.Partage.Earley.Hypergraph
      , NLP.Partage.Earley.Monad
      , NLP.Partage.Earley.Parser
      , NLP.Partage.Earley.Deriv
      , NLP.Partage.Earley.Comp
      , NLP.Partage.Tree.Comp
      , NLP.Partage.Earley
      , NLP.Partage.Test

--       , NLP.Partage.AStar
--       , NLP.Partage.AStar.Deriv
--       , NLP.Partage.AStar.Deriv.Gorn
--       , NLP.Partage.AStar.DepTree

    other-modules:
        NLP.Partage.SOrd
--       , NLP.Partage.Earley.AutoAP
--       , NLP.Partage.AStar.Auto
--       , NLP.Partage.AStar.Heuristic
--       , NLP.Partage.AStar.HeuristicNew
--       , NLP.Partage.AStar.HeuristicOld
--       , NLP.Partage.AStar.Heuristic.Bag
--       , NLP.Partage.AStar.Heuristic.Dummy
--       , NLP.Partage.AStar.Heuristic.Base
-- 
--       , NLP.Partage.AStar.Base
--       , NLP.Partage.AStar.Item
--       , NLP.Partage.AStar.ExtWeight
--       , NLP.Partage.AStar.Chart

    ghc-options: -Wall
    -- cpp-options: -DDebugOn
    -- cpp-options: -DNewHeuristic


source-repository head
    type: git
    location: https://github.com/kawu/tag-vanilla.git


test-suite test
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is:
        test.hs
    other-modules:
        TestSet
      , Parser
    build-depends:
        partage
      , base                    >= 4        && < 5
      , containers              >= 0.5      && < 0.6
      , tasty                   >= 0.10
      , tasty-hunit             >= 0.9
      , HUnit                   >= 1.2
      , data-memocombinators    >= 0.5  && < 0.6
      , pipes                   >= 4.1      && < 4.2
      , transformers            >= 0.3      && < 0.6


-- executable test-partage
--     default-language:
--         Haskell2010
--     build-depends:
--         partage
--       , base                    >= 4        && < 5
--       , containers          	>= 0.5      && < 0.6
--     hs-source-dirs: tests
--     main-is: test-partage.hs
--     ghc-options: -Wall -O2 -threaded -rtsopts
