name:               partage
version:            1.0.0.0
synopsis:           A* TAG parsing
description:
    The library implements an A* parser for tree adjoining grammars (TAGs).
    .
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2015-2019 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/partage
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4.8      && < 5
      , containers          >= 0.5      && < 0.6
      , mtl                 >= 2.1      && < 2.3
      , transformers        >= 0.3      && < 0.6
      , pipes               >= 4.1      && < 4.4
      , PSQueue             >= 1.1      && < 1.2
      , data-partition      >= 0.3      && < 0.4
      , mmorph              >= 1.0      && < 1.2
      , dawg-ord            >= 0.5      && < 0.6
      , data-lens-light     >= 0.1      && < 0.2
      , random              >= 1.1      && < 1.2
      , vector              >= 0.10     && < 0.13
      , hashable            >= 1.2      && < 1.3
      , hashtables          >= 1.2      && < 1.3
      , data-memocombinators  >= 0.5    && < 0.6
      , attoparsec          >= 0.13     && < 0.14
      , text                >= 1.2      && < 1.3

      -- only when debugging:
      , time                >= 1.5      && < 1.9

    exposed-modules:
        NLP.Partage.Tree
      , NLP.Partage.Tree.Other
--       , NLP.Partage.EdgeTree
      , NLP.Partage.DAG
--       , NLP.Partage.Gen
      , NLP.Partage.Auto
      , NLP.Partage.Auto.List
      , NLP.Partage.Auto.Trie
      , NLP.Partage.Auto.DAWG
      , NLP.Partage.Auto.Set
      , NLP.Partage.Auto.WeiTrie
      , NLP.Partage.Auto.WeiSet

      , NLP.Partage.Earley
      , NLP.Partage.Earley.Base
      , NLP.Partage.Earley.Auto
      , NLP.Partage.Earley.Item
      , NLP.Partage.Earley.ExtWeight
      , NLP.Partage.Earley.Chart

      , NLP.Partage.AStar
      , NLP.Partage.AStar.Deriv
      , NLP.Partage.AStar.Deriv.Gorn
--       , NLP.Partage.AStar.DepTree

      , NLP.Partage.AStar.Base
      , NLP.Partage.AStar.Item
      , NLP.Partage.AStar.Chart

      , NLP.Partage.Format.Brackets

    other-modules:
        NLP.Partage.SOrd
      , NLP.Partage.Earley.AutoAP
      , NLP.Partage.AStar.Auto
      , NLP.Partage.AStar.Heuristic
      , NLP.Partage.AStar.HeuristicNew
      -- , NLP.Partage.AStar.HeuristicOld
      , NLP.Partage.AStar.Heuristic.Bag
--       , NLP.Partage.AStar.Heuristic.Dummy
--       , NLP.Partage.AStar.Heuristic.Base
-- 
      , NLP.Partage.AStar.ExtWeight

    ghc-options: -Wall

    -- Turn on debugging
    -- cpp-options: -DDebugOn

    -- Use the new heuristic (see the TAG-2017 paper:
    -- MWE-aware A* TAG parsing revisited)
    cpp-options: -DNewHeuristic

    -- Check realtime if the monotonicity property is preserved
    -- cpp-options: -DCheckMonotonic

    -- Grammar compression
    cpp-options: -DCompression

    -- WARNING: doesn't work with A* (and makes soma A* tests fail)
    -- cpp-options: -DExtraCompression

    -- Allow many (regular) adjunctions at a given node
    -- WARNING: you have to manage this flag in the test-suite as well!
    cpp-options: -DNoAdjunctionRestriction


source-repository head
    type: git
    location: https://github.com/kawu/tag-vanilla.git


test-suite test
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is:
        test.hs
    other-modules:
        TestSet
      , Parser
    build-depends:
        partage
      , base                    >= 4        && < 5
      , containers              >= 0.5      && < 0.6
      , text                    >= 1.2      && < 1.3
      , tasty                   >= 0.10
      , tasty-hunit             >= 0.9
      , HUnit                   >= 1.2
      , data-memocombinators    >= 0.5      && < 0.6
      , pipes                   >= 4.1      && < 4.4
      , transformers            >= 0.3      && < 0.6

    -- Allow many (regular) adjunctions at a given node
    -- WARNING: you have to manage this flag in the library section as well!
    cpp-options: -DNoAdjunctionRestriction


-- executable test-partage
--     default-language:
--         Haskell2010
--     build-depends:
--         partage
--       , base                    >= 4        && < 5
--       , containers          	>= 0.5      && < 0.6
--     hs-source-dirs: tests
--     main-is: test-partage.hs
--     ghc-options: -Wall -O2 -threaded -rtsopts

executable partage
    default-language:
        Haskell2010
    build-depends:
        partage
      , base                    >= 4        && < 5
      , mtl                     >= 2.1      && < 2.3
      , optparse-applicative    >= 0.12     && < 0.15
      , attoparsec              >= 0.13     && < 0.14
      , text                    >= 1.2      && < 1.3
      , containers              >= 0.5      && < 0.6
      , time                    >= 1.5      && < 1.9
      , pipes                   >= 4.1      && < 4.4
      , data-memocombinators    >= 0.5      && < 0.6
      , vector                  >= 0.10     && < 0.13
    hs-source-dirs: tools
    main-is: partage.hs
    ghc-options: -Wall -O2 -threaded -rtsopts
