name:               tag-vanilla
version:            0.1
synopsis:           Vanilla TAGs
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2015 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/tag-vanilla
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.4      && < 0.6
      , mtl                 >= 2.1      && < 2.3
      , transformers        >= 0.3      && < 0.5
      , pipes               >= 4.1      && < 4.2
      , PSQueue             >= 1.1      && < 1.2
      , data-partition      >= 0.3      && < 0.4
      -- 
      -- from `ltag`, not needed any more:
      -- , feature-structure   >= 0.2      && < 0.3
      -- , tostring            >= 0.2      && < 1.0
      --
      -- for using diagrams framework
      --
      -- , SVGFonts                >= 1.5      && < 2.0
      -- , diagrams-svg            >= 1.3      && < 2.0
      -- , diagrams-lib            >= 1.3      && < 2.0

    exposed-modules:
        NLP.TAG.Vanilla.Core
      , NLP.TAG.Vanilla.Tree
      , NLP.TAG.Vanilla.Rule
      , NLP.TAG.Vanilla.Earley

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/tag-vanilla.git


-- executable test1
--     -- build-depends:
--     hs-source-dirs: tools, src
--     main-is: test1.hs
--     ghc-options: -Wall -O2 -threaded -rtsopts
